issue with nav bar, it was covering section titles. issue fixed

--- a/styles.scss
+++ b/styles.scss
@@ -74,6 +74,10 @@ main {
   margin: 20px 10px;
 }
 
+section {
+  scroll-margin-top: 94px;
+}
+
 .navigation {
   @include flex;
   height: 10%;
